# nostr

./: Cargo.toml
bindings/nostr-sdk-js/src/client/: mod.rs
crates/ensure_no_std/: Cargo.toml
crates/ensure_no_std/src/: main.rs
crates/nostr/: Cargo.toml  README.md
crates/nostr-sdk/: README.md
crates/nostr-sdk/examples/: client-with-opts.rs  client.rs
crates/nostr-sdk/src/client/: mod.rs
crates/nostr/src/: lib.rs  prelude.rs
crates/nostr/src/event/: builder.rs  id.rs  kind.rs  mod.rs  tag.rs  unsigned.rs
crates/nostr/src/key/: mod.rs
crates/nostr/src/message/: client.rs  mod.rs  relay.rs  subscription.rs
crates/nostr/src/nips/: nip13.rs  nip19.rs  nip26.rs  nip58.rs  nip65.rs
crates/nostr/src/types/: channel_id.rs  contact.rs  entity.rs  metadata.rs  mod.rs  profile.rs  time.rs  url.rs
