[workspace]
members = [
    "bindings/nostr-ffi",
    "bindings/nostr-nodejs",
    "bindings/nostr-sdk-ffi",
    "bindings/nostr-sdk-nodejs",
    "crates/nostr",
    "crates/nostr-sdk",
    "crates/nostr-sdk-sqlite",
]

[workspace.package]
homepage = "https://github.com/rust-nostr/nostr"
repository = "https://github.com/rust-nostr/nostr.git"
license = "MIT"
rust-version = "1.64.0"

[profile.release]
lto = true
codegen-units = 1

[patch.'https://github.com/apache/teaclave-sgx-sdk.git']
sgx_tstd = { version = "1.1.6", git = "https://github.com/apache/incubator-teaclave-sgx-sdk", branch = "master", optional = true}

